# MessageJar

./: .dockerignore  Dockerfile  LICENSE  README.md  TODO.md  api.py  app.py  auth.py  backend.py  chat.py  chatbackend.py  db.py  docker-compose.yml  jar.py  limiter.py  main.py  pyproject.toml  requirements.txt  schema.sql  test.py  user.py
static/: chat.js  jars.js  style.css
templates/: base.html  chat.html  chat_main.html  main.html  main_page.html  quick-error.html
templates/auth/: login.html  register.html
templates/chat/: main.html
templates/jars/: jar.html  main.html
templates/user/: invite.html  main.html  pass_change.html  token.html
