[project]
name = "messagejar"
version = "1.0.0"
description = "Message Jar messaging app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask==3.1.3",
    "flask-limiter==4.1.1",
    "flask-wtf==1.2.2",
    "redis==4.6.0 ; sys_platform == 'linux'",
    "redislite==6.2.* ; sys_platform == 'linux'",
]
